--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ canvas {
 
      // Initialize Rive
      riveInstance = new rive.Rive({
-        src: 'Internet.riv', // Ensure this file name is correct
+        src: 'internet.riv', // Ensure this file name is correct
         canvas: document.getElementById('riveCanvas'),
         autoplay: true,
         artboard: 'Internet', // Ensure this artboard name is correct
