--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@ canvas {
         }
 
         // Update canvas height based on breakpoint
-       // if (browserWidth >= 500) {
-            //canvas.style.height = '500px'; // wide height
-       // } else {
-            //canvas.style.height = '500'; // skinny height
+        if (browserWidth >= 600) {
+            canvas.style.height = '600px'; // wide height
+        } else {
+            canvas.style.height = '600'; // skinny height
         }
 
         // Ensure Rive redraws on canvas resize
