--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       canvas: document.getElementById('rive-canvas'),
       autoplay: true,
       autoBind: true,
-      artboard: 'Basigo', 
+      artboard: 'Internet', 
       stateMachines: 'SM1',
 
       onLoad: () => {
