--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Rive Button</title>
+  <title>Safaricom Runtime Website</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- 1. Page-level styling -->
